gitops/vote-api/vote-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-api
  namespace: gitops-managed-project
  labels:
    app: vote-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-api
  template:
    metadata:
      labels:
        app: vote-api
    spec:
      containers:
        - name: vote-api
          image: image-registry.openshift-image-registry.svc:5000/gitops-managed-project/pipelines-vote-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
